# cpp-multi-proj-tpl

./: .gitignore  CMakeLists.txt  Makefile  README.md  vscode.code-profile
src/hello_world/: CMakeLists.txt
